@@ -1,6 +1,7 @@
 Revision history for Pandoc-Elements
 
 {{$NEXT}}
+    - Deprecate Pandoc::Filter::Usage and remove circular dependency
 
 0.31  2017-02-01 15:52:47 CET
     - Remove deprecated script pandocwalk
